# apsc-linearalgebra-language

./: LICENSE  README.md  report.md
src/: CMakeLists.txt  Doxyfile  format_all.md
src/algorithms/: spai.hpp
src/apsc_language/: apsc_language.hpp
src/demo/: MPI_full_matrix_cg.cpp  MPI_sparse_matrix_bicgstab_spai.cpp  MPI_sparse_matrix_cg.cpp  MPI_sparse_matrix_gmres_spai.cpp  csc.cpp  csc_demo.cpp  eigen_structure_map_test.cpp  full_matrix.cpp  gmres_test.cpp  linear_algebra.cpp  linear_algebra_demo.cpp  matrix_with_vec_support_ls_test.cpp  mpi_eigen_matrix_test.cpp  mpi_eigen_sparse_matrix.cpp  mpi_eigen_sparse_matrix_test.cpp  mpi_matrix.cpp  mpi_matrix_test.cpp  spai.cpp  spai_test.cpp  vector_test.cpp
src/html/: CSC_8hpp.html  CSC_8hpp__dep__incl.map  CSC_8hpp__dep__incl.md5  CSC_8hpp__incl.map  CSC_8hpp__incl.md5  CSC_8hpp_source.html  EigenStructureMap_8hpp.html  EigenStructureMap_8hpp__dep__incl.map  EigenStructureMap_8hpp__dep__incl.md5  EigenStructureMap_8hpp__incl.map  EigenStructureMap_8hpp__incl.md5  EigenStructureMap_8hpp_source.html  FullMatrix_8hpp.html  FullMatrix_8hpp__dep__incl.map  FullMatrix_8hpp__dep__incl.md5  FullMatrix_8hpp__incl.map  FullMatrix_8hpp__incl.md5  FullMatrix_8hpp_source.html  MPIContext_8hpp.html  MPIContext_8hpp__dep__incl.map  MPIContext_8hpp__dep__incl.md5  MPIContext_8hpp__incl.map  MPIContext_8hpp__incl.md5  MPIContext_8hpp_source.html  MPIFullMatrix_8hpp.html  MPIFullMatrix_8hpp__dep__incl.map  MPIFullMatrix_8hpp__dep__incl.md5  MPIFullMatrix_8hpp__incl.map  MPIFullMatrix_8hpp__incl.md5  MPIFullMatrix_8hpp_source.html  MPISparseMatrix_8hpp.html  (+151 more)
(+193 files in other folders)
